Update to the portfolio

--- a/btssio.html
+++ b/btssio.html
@@ -116,11 +116,13 @@
         </div>
         <div class="epreuveE5">
             <h2>Eupreuve E5</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni, eum consequuntur? Corporis sit velit voluptatem eum modi perferendis cum veritatis a accusamus amet. Voluptatum exercitationem, officiis numquam eligendi hic non.</p>
+            <a href="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf" target="_blank">Tableau de Synthèse</a>
         </div>
         <div class="epreuveE6">
             <h2>Eupreuve E6</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore quidem ipsa aspernatur repudiandae dolorem. Nihil magni illo tenetur facere animi perspiciatis, perferendis consequuntur? Nostrum minus reiciendis eum tenetur fugiat sapiente.</p>
+            <a href="" target="_blank">Page de Garde</a>
+            <a href="files/fiche_SP1_ClientLeger.pdf" target="_blank">Situation Professionnel 1</a>
+            <a href="files/fiche_SP2_2025_clientLourd.pdf" target="_blank">Situation Professionnel 2</a>
         </div>
     </section>
     <footer style="text-align: center;">
