--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <script src="https://kit.fontawesome.com/83d4615a65.js" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="css/global.css">
         <link rel="stylesheet" href="css/style.css">
         <title>Portfolio</title>
     </head>
@@ -32,13 +33,19 @@
             <div class="a-propos">
                 <div>
                     <h2>À propos de moi</h2>
-                    <p>Passionné par la programmation et les nouvelles technologies, je
-                        suis actuellement en deuxième année de BTS SIO et j’aspire à
-                        devenir développeur Informatique. Pour approfondir mes
-                        connaissances et compétences tout en étant proche des entreprises,
-                        je souhaite poursuivre ma formation en apprentissage dans un cycle
-                        ingénieur.
+                    <p>
+                        Je suis actuellement étudiant en 2ème année de BTS SIO (Services Informatiques aux
+                        Organisations) option SLAM (Solutions Logicielles et Applications Métiers) à l'EFREI
+                        Paris, école d'Ingénieurs Généraliste du Numérique.
                     </p>
+                    <p>
+                        Dès mon plus jeune âge, j'ai eu un fort intérêt pour les nouvelles technologies et 
+                        surtout pour l'informatique. C'est donc tout naturellement que j'ai choisi tout d'abord
+                        de m'orienter vers un Bac Pro Systèmes Numériques spécialité Réseaux 
+                        Informatiques et Systèmes Communicants. Puis, ayant une appétence pour les 
+                        langages de programmation, j'ai continué mon parcours vers le BTS SIO option SLAM. 
+                    </p>
+                    <br>
                     <div class="profile-link">
                         <a href="files/CV Dubois Gauthier 2025.pdf" target="_blank" class="button-link">Voir mon CV</a>
                         <a href="btssio.html" class="button-link">BTS SIO</a>
@@ -51,38 +58,93 @@
             <div class="competence">
                 <h2>Mes Compétences</h2>
                 <div class="BoxCube">
-                    <div>
-                        <h3>Language de Programmation</h3>
+                    <div class="box">
+                        <h3>Languages de Programmation</h3>
                         <div class="small-gap">
-                            <span style="color: #f16529;"><i class="fa-brands fa-html5 fa-5x"></i></span>
-                            <span style="color: #379ad6;"><i class="fa-brands fa-css3-alt fa-5x"></i></span>
-                            <span style="color: #f7df1e;"><i class="fa-brands fa-js fa-5x"></i></span>
-                            <span style="color: #8a91bc;"><i class="fa-brands fa-php fa-5x"></i></span>
-                            <img src="images/logoMySQL.png" alt="MySQL" width="80" height="80">
-                            <span style="color: red;"><i class="fa-brands fa-java fa-5x"></i></span>
+                            <span style="color: #f16529;"><i class="fa-brands fa-html5 fa-4x"></i></span>
+                            <span style="color: #379ad6;"><i class="fa-brands fa-css3-alt fa-4x"></i></span>
+                            <span style="color: #f7df1e;"><i class="fa-brands fa-js fa-4x"></i></span>
+                            <span style="color: #8a91bc;"><i class="fa-brands fa-php fa-4x"></i></span>
+                            <span style="color: red;"><i class="fa-brands fa-java fa-4x"></i></span>
                         </div>
                     </div>
-                    <div class="row-box">
-                        <div>
-                            <h3>Framework</h3>
-                            <div class="small-gap">
-                                <span style="color: #61dbfb;"><i class="fa-brands fa-react fa-5x"></i></span>
-                            </div>
+                    <div class="box">
+                        <h3>Modélisation et Bases de données</h3>
+                        <div class="small-gap">
+                            <img src="images/JMeriseLogoPetit.png" alt="JMerise Etudiant">
+                            <!-- <img src="images/UMLIcon.png" alt="UML (Unified Modeling Language)"> -->
+                            <img src="images/logoMySQL.png" alt="MySQL">
                         </div>
-                        <div>
-                            <h3>Logiciel</h3>
-                            <div class="small-gap">
-                                <span style="color: #0f8cc4;"><i class="fa-brands fa-wordpress fa-5x"></i></span>
-                                <span style="color: #de4c36;"><i class="fa-brands fa-git-alt fa-5x"></i></span>
-                            </div>
+                    </div>
+                    <div class="box">
+                        <h3>Framework</h3>
+                        <div class="small-gap">
+                            <span style="color: #61dbfb;"><i class="fa-brands fa-react fa-4x"></i></span>
+                            <!-- <img src="images/icons8-next.js.svg" alt="NextJS"> -->
                         </div>
-                        <div>
-                            <h3>Gestion des Outils</h3>
-                            <div class="small-gap">
-                                <span><i class="fa-brands fa-github fa-5x"></i></span>
-                                <img src="images/visual-studio-code.png" alt="Visual Studio Code" width="80" height="80">
-                            </div>
+                    </div>
+                    <div class="box">
+                        <h3>CMS</h3>
+                        <div class="small-gap">
+                            <span style="color: #0f8cc4;"><i class="fa-brands fa-wordpress fa-4x"></i></span>
                         </div>
+                    </div>
+                    <div class="box">
+                        <h3>Outils</h3>
+                        <div class="small-gap">
+                            <span><i class="fa-brands fa-github fa-4x"></i></span>
+                            <img src="images/visual-studio-code.png" alt="Visual Studio Code">
+                            <img src="images/eclipse_logo.png" alt="Eclipse IDE">
+                            <span><i class="fa-brands fa-figma fa-4x"></i></span>
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h3>Gestion du projet</h3>
+                        <div class="small-gap">
+                            <span style="color: #de4c36;"><i class="fa-brands fa-git-alt fa-4x"></i></span>
+                            <span><i class="fa-brands fa-trello fa-4x"></i></span>
+                            <!-- <p>Gantt Project</p> -->
+                        </div>
+                    </div>
+                    <div class="box">
+                        <h3>Système et Reseaux</h3>
+                        <div class="small-gap">
+                            <span><i class="fa-brands fa-linux fa-4x"></i></span>
+                            <img src="images/vmware-logo.png" alt="VMware">
+                            <img src="images/xamppLogo.png" alt="XAMPP">
+                            <img src="images/ActiveDirectory.png" alt="Active Directory">
+                            <!-- <img src="images/DNSIcon.png" alt="DNS"> -->
+                            <!-- <img src="images/dhcp.png" alt="DHCP"> -->
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="work">
+                <h2>Expériences Professionnelles</h2>
+                <div class="work-content">
+                    <div class="work-header">
+                        <ul>
+                            <li>
+                                <h3>Hiram Finance - Mai-Juillet 2024</h3>
+                                <p>Stagiaire développeur Web</p>
+                                <ul>
+                                    <li>Amélioration et personnalisation du site web via Wordpress et Elementor</li>
+                                    <li>Optimisation du portail de candidatures et des pages institutionnelles</li>
+                                </ul>
+                            </li>
+                            <li>
+                                <h3>Evasions Bryardes - Mai-Juin 2023 & Nov.-Déc. 2024</h3>
+                                <p>Stagiaire développeur Web</p>
+                                <ul>
+                                    <li>Conception et amélioration du site vitrine (HTML, CSS, PHP, MySQL)</li>
+                                    <li>Développement d'un module de réservation d'événements</li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="work-image">
+                        <img src="images/Logo-long-Hiram-Finance-Vert-Guitet-barre-.webp">
+                        <img src="images/Logoevasions-3-1920w.png">
                     </div>
                 </div>
             </div>
@@ -90,26 +152,35 @@
         <section id="projets">
             <h2>Mes Projets</h2>
             <div class="gridBox">
-                <div class="smallBox">
-                    <h3>Client Lourd</h3>
+                <div>
+                    <a href="https://github.com/Gautk1ng/SNCF_CL" target="_blank" class="background-1"><span>SNCF (Client Lourd)</span></a>
                 </div>
-                <div class="smallBox">
-                    <h3>Client Léger</h3>
+                <div>
+                    <a href="https://github.com/Gautk1ng/SiteSNCFRH" target="_blank" class="background-2"><span>Site SNCF (Client Léger)</span></a>
+                </div>
+                <div>
+                    <a href="https://github.com/Gautk1ng/meteo-app" target="_blank" class="background-3"><span>Meteo App</span></a>
+                </div>
+                <div>
+                    <a href="https://github.com/Gautk1ng/gestion-de-stock" target="_blank" class="background-4"><span>Gestion de Stock</span></a>
                 </div>
             </div>
-            <h2>Mes Certificat</h2>
+            <div class="small-link">
+                <a href="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf" target="_blank" class="button-link">Tableau de Synthèse</a>
+            </div>
+            <h2>Mes Certifications</h2>
             <div class="gridBox">
                 <div class="smallBox">
-                    <h3>Language C</h3>
+                    <embed src="files/certificat_language_c_9925723517.pdf">
                 </div>
                 <div class="smallBox">
-                    <h3>HTML / CSS</h3>
+                    <embed src="files/certificat_html_css_4794570878.pdf">
                 </div>
                 <div class="smallBox">
-                    <h3>PHP / MySQL</h3>
+                    <embed src="files/certificat_php_mysql_9193764945.pdf">
                 </div>
                 <div class="smallBox">
-                    <h3>JS</h3>
+                    <embed src="files/certificat_javascript.pdf">
                 </div>
             </div>
         </section>
@@ -118,9 +189,14 @@
             <div class="contact-content">
                 <div class="contact-header">
                     <div>
-                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit porro quae itaque vitae modi. Inventore nisi voluptas porro labore quis ipsa nobis beatae quod consequatur iure, voluptates corrupti atque sed.
-                        Tempore officia voluptatum maxime aliquid? Accusamus possimus nam in praesentium voluptas tenetur odio facilis nihil dicta. Tenetur, debitis neque sunt error quia, consequuntur minima nobis corporis iure fugiat quasi ratione.
-                        A voluptas omnis nisi doloribus officiis saepe autem maiores nobis deserunt labore. Eius consequuntur amet, quo fugiat error optio? Odio at nihil quod, unde impedit dolores a ea sit nemo?</p>
+                        <p>
+                            Je suis actuellement à la recherche d'une d'alternance pour Septembre 2025 
+                            en Informatique et Applications.
+                        </p>
+                        <p>
+                            N'hésitez pas à me contacter, je serai ravi de discuter avec vous 
+                            de la manière dont je pourrais apporter de la valeur à votre entreprise.
+                        </p>
                         <br>
                         <a href="files/CV Dubois Gauthier 2025.pdf" target="_blank" class="button-link">Voir mon CV</a>
                     </div>
