Mise à jour du page btssio

--- a/btssio.html
+++ b/btssio.html
@@ -48,7 +48,7 @@
             </ul>
             <p>Et, est aussi agrémenté de 10 semaines de stage.</p>
         </div>
-        <div>
+        <div class="box-etat">
             <p>C’est un diplôme national d’Etat qui répond aux besoins du marché du travail de
                 profils qualifiés en TIC (Technologies d’Information Communication) en matière de sécurité,
                 d’efficacité et d’innovation technologique. Pour remplir cet objectif, 
@@ -99,7 +99,7 @@
                 </ul>
             </div>
         </div>
-        <div>
+        <div class="box-travail">
             <p>
                 Le BTS est destiné à une intégration rapide sur le marché du travail. 
                 Toutefois, il est possible de poursuivre des études vers :
@@ -115,11 +115,12 @@
             </ul>
         </div>
         <div class="epreuveE5">
-            <h2>Eupreuve E5</h2>
-            <a href="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf" target="_blank">Tableau de Synthèse</a>
+            <h1>Epreuve E5</h1>
+            <h3>Tableau de Synthèse</h3>
+            <embed src="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf#view=FitH" width="80%" height="100%">
         </div>
         <div class="epreuveE6">
-            <h2>Eupreuve E6</h2>
+            <h2>Epreuve E6</h2>
             <a href="" target="_blank">Page de Garde</a>
             <a href="files/fiche_SP1_ClientLeger.pdf" target="_blank">Situation Professionnel 1</a>
             <a href="files/fiche_SP2_2025_clientLourd.pdf" target="_blank">Situation Professionnel 2</a>
