Changing the X-Frame-Option

--- a/btssio.html
+++ b/btssio.html
@@ -117,7 +117,7 @@
         <div class="epreuveE5">
             <h1>Epreuve E5</h1>
             <h3>Tableau de Synthèse</h3>
-            <iframe src="/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf#view=FitH" width="80%" height="100%"></iframe>
+            <embed src="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf#view=FitH" width="80%" height="100%"></embed>
         </div>
         <div class="epreuveE6">
             <h2>Epreuve E6</h2>
