--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="box">
                         <h3>Modélisation et Bases de données</h3>
                         <div class="small-gap">
-                            <img src="images/JMeriseLogoPetit.png" alt="JMerise Etudiant">
+                            <!-- <img src="images/JMeriseLogoPetit.png" alt="JMerise Etudiant"> -->
                             <!-- <img src="images/UMLIcon.png" alt="UML (Unified Modeling Language)"> -->
                             <img src="images/logoMySQL.png" alt="MySQL">
                         </div>
