Full rewrite of the entire codebase

--- a/btssio.html
+++ b/btssio.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/83d4615a65.js" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="css/btssio_style.css">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="css/btssioPage.css">
+    <title>Portfolio BTS SIO</title>
 </head>
 <body>
-    <header>
-        <div>
-            <a href="index.html"><i class="fa-solid fa-house fa-2x"></i></a>
-        </div>
-        <div class="pageLink">
+    <nav>
+        <a href="index.html#intro"><i class="fa-solid fa-house fa-2x"></i></a>
+        <div class="nav-link">
             <a href="index.html#profil">À PROPOS</a>
+            <a href="btssio.html" style="background-color: greenyellow;">BTS SIO</a>
             <a href="index.html#projets">MES PROJETS</a>
+            <a href="veilleTech.html">VEILLE TECHNOLOGIE</a>
             <a href="index.html#contact">CONTACT</a>
         </div>
         <div>
-            <a href="https://github.com/Gautk1ng" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
-            <a href="https://www.linkedin.com/in/gauthier-dubois3/" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+            <a href="https://github.com/Gautk1ng" class="test" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="test2" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
         </div>
-    </header>
+    </nav>
+
     <section id="info">
         <div class="box-bts">
             <h1>BTS SIO</h1>
@@ -57,7 +58,7 @@
             </p>
         </div>
         <div class="box-option">
-            <div class="box-color-style">
+            <div>
                 <h1>Option SLAM</h1>
                 <h2>Solutions Logicielles et Applications Métiers</h2>
                 <p>
@@ -78,7 +79,7 @@
                     <li>Technicien d’études informatiques</li>
                 </ul>
             </div>
-            <div class="box-color-style">
+            <div>
                 <h1>Option SISR</h1>
                 <h2>Solutions d'Infrastructure, Systèmes et Réseaux</h2>
                 <p>
@@ -114,18 +115,21 @@
                 <li>Les écoles d’ingénieurs en admissions parallèles.</li>
             </ul>
         </div>
-        <div class="epreuveE5">
-            <h1>Epreuve E5</h1>
-            <h3>Tableau de Synthèse</h3>
-            <embed src="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf#view=FitH" width="80%" height="100%"></embed>
-        </div>
-        <div class="epreuveE6">
-            <h2>Epreuve E6</h2>
-            <a href="" target="_blank">Page de Garde</a>
-            <a href="files/fiche_SP1_ClientLeger.pdf" target="_blank">Situation Professionnel 1</a>
-            <a href="files/fiche_SP2_2025_clientLourd.pdf" target="_blank">Situation Professionnel 2</a>
+
+        <div class="epreuve">
+            <div class="epreuveE5">
+                <h1>Epreuve E5</h1>
+                <a href="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf" target="_blank">Tableau de Synthèse</a>
+            </div>
+            <div class="epreuveE6">
+                <h1>Epreuve E6</h1>
+                <a href="" target="_blank">Page de Garde</a>
+                <a href="files/fiche_SP1_ClientLeger.pdf" target="_blank">Situation Professionnel 1</a>
+                <a href="files/fiche_SP2_2025_clientLourd.pdf" target="_blank">Situation Professionnel 2</a>
+            </div>
         </div>
     </section>
+
     <footer style="text-align: center;">
         <p>&copy; 2025 - Gauthier Dubois</p>
     </footer>
