--- a/btssio.html
+++ b/btssio.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="index.html#intro"><i class="fa-solid fa-house fa-2x"></i></a>
+        <a href="index.html#"><i class="fa-solid fa-house fa-2x"></i></a>
         <div class="nav-link">
             <a href="index.html#profil">À PROPOS</a>
             <a href="btssio.html" style="background-color: greenyellow;">BTS SIO</a>
@@ -18,8 +18,8 @@
             <a href="index.html#contact">CONTACT</a>
         </div>
         <div>
-            <a href="https://github.com/Gautk1ng" class="test" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
-            <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="test2" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+            <a href="https://github.com/Gautk1ng" class="github" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="linkedin" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
         </div>
     </nav>
 
@@ -119,17 +119,19 @@
         <div class="epreuve">
             <div class="epreuveE5">
                 <h1>Epreuve E5</h1>
-                <a href="files/8-1-BTS SIO-2025-Annexe 8-1-EpreuveE5-Tableau de synthese.pdf" target="_blank">Tableau de Synthèse</a>
+                <a href="files/8-1-BTSSIO-2025-Annexe8-1-EpreuveE5-Tableaudesynthese.pdf" target="_blank">Tableau de Synthèse</a>
             </div>
             <div class="epreuveE6">
                 <h1>Epreuve E6</h1>
-                <a href="" target="_blank">Page de Garde</a>
+                <!-- <a href="" target="_blank">Page de Garde</a> -->
                 <a href="files/fiche_SP1_ClientLeger.pdf" target="_blank">Situation Professionnel 1</a>
                 <a href="files/fiche_SP2_2025_clientLourd.pdf" target="_blank">Situation Professionnel 2</a>
             </div>
         </div>
     </section>
 
+    <hr>
+    
     <footer style="text-align: center;">
         <p>&copy; 2025 - Gauthier Dubois</p>
     </footer>
