--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <nav>
-            <a href="#intro"><i class="fa-solid fa-house fa-2x"></i></a>
+            <a href="#"><i class="fa-solid fa-house fa-2x"></i></a>
             <div class="nav-link">
                 <a href="#profil">À PROPOS</a>
                 <a href="btssio.html">BTS SIO</a>
@@ -18,8 +18,8 @@
                 <a href="#contact">CONTACT</a>
             </div>
             <div>
-                <a href="https://github.com/Gautk1ng" class="test" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
-                <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="test2" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+                <a href="https://github.com/Gautk1ng" class="github" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+                <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="linkedin" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
             </div>
         </nav>
 
@@ -61,80 +61,81 @@
                     <div class="flexRow">
                         <h3>Langages de Programmation</h3>
                         <div>
-                            <span style="color: #f16529;"><i class="fa-brands fa-html5 fa-4x"></i></span>
-                            <span style="color: #379ad6;"><i class="fa-brands fa-css3-alt fa-4x"></i></span>
-                            <span style="color: #f7df1e;"><i class="fa-brands fa-js fa-4x"></i></span>
-                            <span style="color: #8a91bc;"><i class="fa-brands fa-php fa-4x"></i></span>
-                            <span style="color: red;"><i class="fa-brands fa-java fa-4x"></i></span>
+                            <img src="images/logo/htmlLogo.webp" alt="HTML" height="60px">
+                            <img src="images/logo/cssLogo.webp" alt="CSS" height="60px">
+                            <img src="images/logo/jsLogo.webp" alt="Javascript" height="60px">
+                            <img src="images/logo/phpLogo.webp" alt="PHP" height="60px">
+                            <img src="images/logo/javaLogo.webp" alt="Java" height="60px">
+                            <img src="images/logo/cLogo.webp" alt="Langage C" height="60px">
                         </div>
                     </div>
                     <div class="flexRow">
                         <h3>Modélisation et Bases de données</h3>
                         <div>
-                            <img src="images/xamppLogo.png" alt="XAMPP" height="60px">
-                            <img src="images/logoMySQL.png" alt="MySQL" height="60px">
+                            <img src="images/logo/xamppLogo.webp" alt="XAMPP" height="60px">
+                            <img src="images/logo/logoMySQL.webp" alt="MySQL" height="60px">
                         </div>
                     </div>
                     <div class="flexRow">
                         <h3>Framework & CMS</h3>
                         <div>
                             <span style="color: #61dbfb;"><i class="fa-brands fa-react fa-4x"></i></span>
-                            <span style="color: #0f8cc4;"><i class="fa-brands fa-wordpress fa-4x"></i></span>
+                            <span style="color: #0f8cc4; background-color: white; border-radius: 60%;"><i class="fa-brands fa-wordpress fa-4x"></i></span>
                         </div>
                     </div>
                     <div class="flexRow">
                         <h3>Outils & Gestion de Projets</h3>
                         <div>
                             <span><i class="fa-brands fa-github fa-4x"></i></span>
-                            <img src="images/visual-studio-code.png" alt="Visual Studio Code" height="60px">
-                            <img src="images/eclipse_logo.png" alt="Eclipse IDE" height="60px">
-                            <span><i class="fa-brands fa-figma fa-4x"></i></span>
+                            <img src="images/logo/visualstudiocodeLogo.webp" alt="Visual Studio Code" height="60px">
+                            <img src="images/logo/eclipseLogo.webp" alt="Eclipse IDE" height="60px">
+                            <img src="images/logo/figmaLogo.webp" alt="Figma" height="60px">
                             <span style="color: #de4c36;"><i class="fa-brands fa-git-alt fa-4x"></i></span>
-                            <span><i class="fa-brands fa-trello fa-4x"></i></span>
+                            <span style="color: #0082d3;"><i class="fa-brands fa-trello fa-4x"></i></span>
                         </div>
                     </div>
                     <div class="flexRow">
                         <h3>Système et Réseaux</h3>
                         <div>
                             <span><i class="fa-brands fa-linux fa-4x"></i></span>
-                            <img src="images/vmware-logo.png" alt="VMware" height="60px">
-                            <img src="images/ActiveDirectory.png" alt="Active Directory" height="60px">
+                            <img src="images/logo/vmwareLogo.webp" alt="VMware" height="60px">
+                            <img src="images/logo/ActiveDirectory.webp" alt="Active Directory" height="60px">
+                        </div>
+                    </div>
+                    <div class="flexRow">
+                        <h3>En cours d'acquisition</h3>
+                        <div>
+                            <img src="images/logo/csharpLogo.webp" alt="Langage C# logo" height="60px">
+                            <img src="images/logo/cppLogo.webp" alt="Langage C++ logo" height="60px">
                         </div>
                     </div>
                 </div>
-                <!-- <p class="paragraph">Les compétences que je souhaite apprendre, en cours d'apprenti ou me faire un hobby.</p> -->
-                <!-- <div class="flexBox">
-                    <article>
-                        <h3>Langage C</h3>
-                        <img src="">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Consectetur voluptate alias, saepe iste vel ullam nesciunt deleniti sunt, 
-                            omnis quasi, quae ipsam pariatur deserunt quisquam obcaecati libero incidunt 
-                            a facilis.
-                        </p>
-                    </article>
+                <p class="paragraph">
+                    Ayant un fort intêret pour le dessin et animation, je me perfectionne dans le style de encrage et crayon comme 
+                    ci-dessous et je souhaite apprendre le logiciel Blender.
+                </p>
+                <div class="flexBox">
                     <article>
                         <h3>Blender</h3>
-                        <img src="">
+                        <img 
+                            id="blender-img" 
+                            height="300px"
+                            src="images/logo/blenderLogo.webp" 
+                            alt="Blender Logo"
+                            onmouseover="this.src='images/blenderShowcase.webp';"
+                            onmouseout="this.src='images/logo/blenderLogo.webp';"
+                        >
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Consectetur voluptate alias, saepe iste vel ullam nesciunt deleniti sunt, 
-                            omnis quasi, quae ipsam pariatur deserunt quisquam obcaecati libero incidunt 
-                            a facilis.
+                            Blender un logiciel 3D et open-source, pour crée des films animés, effets visuels, 
+                            art, modèle 3D imprimé, conception de mouvement, interactive 3D applications, et réalité virtuelle.
                         </p>
                     </article>
                     <article>
-                        <h3>Blender</h3>
-                        <img src="">
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                            Consectetur voluptate alias, saepe iste vel ullam nesciunt deleniti sunt, 
-                            omnis quasi, quae ipsam pariatur deserunt quisquam obcaecati libero incidunt 
-                            a facilis.
-                        </p>
+                        <h3>Dessin</h3>
+                        <img src="images/sketch2018_KimJungGi.png" height="500px">
+                        <p>Référence : 2018 Sketch Collection - Kim Jung Gi</p>
                     </article>
-                </div> -->
+                </div>
             </div>
             <h2>Expériences Professionnelles</h2>
             <div class="work">
@@ -167,6 +168,18 @@
             <h2>Mes Projets</h2>
             <div class="flexBox">
                 <div class="flexContainer">
+                    <img src="images/Logo-long-Hiram-Finance-Vert-Guitet-barre-.webp" alt="logo Hiram Finance" width="300px">
+                    <aside>
+                        <h3>Hiram Finance Site Web</h3>
+                        <p>
+                            Amélioration et personnalisation du site web via Wordpress et Elementor, 
+                            puis optimisation du portail de candidatures et des pages institutionnelles.
+                        </p>
+                        <a href="https://hiram-finance.com/" target="_blank"><i class="fa-solid fa-globe fa-1x"></i> Site Web</a>
+                    </aside>
+                </div>
+                <hr style="width: 100%; border: 2px solid;">
+                <div class="flexContainer">
                     <img src="images/screenshot_sncfCL.png" alt="SNCF (Client Lourd)" height="200px">
                     <aside>
                         <h3>SNCF (Client Lourd)</h3>
@@ -175,7 +188,7 @@
                             de la base de données de la SNCF-RH
                         </p>
                         <a href="https://github.com/Gautk1ng/SNCF_CL" target="_blank"><i class="fa-brands fa-github fa-1x"></i> Source Code</a>
-                        <a href="" target="_blank"><i class="fa-solid fa-file fa-1x"></i> Document</a>
+                        <a href="files/fiche_SP2_2025_clientLourd.pdf" target="_blank"><i class="fa-solid fa-file fa-1x"></i> Document</a>
                     </aside>
                 </div>
                 <div class="flexContainer">
@@ -186,7 +199,7 @@
                             PHP-MySQL
                         </p>
                         <a href="https://github.com/Gautk1ng/SiteSNCFRH" target="_blank"><i class="fa-brands fa-github fa-1x"></i> Source Code</a>
-                        <a href="" target="_blank"><i class="fa-solid fa-file fa-1x"></i> Document</a>
+                        <a href="files/fiche_SP1_ClientLeger.pdf" target="_blank"><i class="fa-solid fa-file fa-1x"></i> Document</a>
                     </aside>
                     <img src="images/screenshot_sncfSite.png" alt="SNCF Site (Client Léger)" height="200px">
                 </div>
