--- a/veilleTech.html
+++ b/veilleTech.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav>
-        <a href="#intro"><i class="fa-solid fa-house fa-2x"></i></a>
+        <a href="index.html#"><i class="fa-solid fa-house fa-2x"></i></a>
         <div class="nav-link">
             <a href="index.html#profil">À PROPOS</a>
             <a href="btssio.html">BTS SIO</a>
@@ -18,16 +18,63 @@
             <a href="index.html#contact">CONTACT</a>
         </div>
         <div>
-            <a href="https://github.com/Gautk1ng" class="test" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
-            <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="test2" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
+            <a href="https://github.com/Gautk1ng" class="github" target="_blank"><i class="fa-brands fa-github fa-3x"></i></a>
+            <a href="https://www.linkedin.com/in/gauthier-dubois3/" class="linkedin" target="_blank"><i class="fa-brands fa-linkedin fa-3x"></i></a>
         </div>
     </nav>
-    <section>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic harum vitae, atque voluptates placeat aspernatur consectetur. Exercitationem nemo, natus quas consequatur ducimus quasi officia pariatur rem, quaerat, dolore nulla sunt!
-        Beatae voluptates libero at eos laudantium repellendus aperiam sint reiciendis numquam rerum ab perspiciatis eius esse sit facere eum molestiae maiores fugiat assumenda, provident nostrum est perferendis? Quisquam, saepe. Repudiandae.
-        Minima magnam, cumque laborum impedit deleniti nulla non soluta consequatur ullam ea delectus illo, autem veritatis quod nemo in ipsam dolores dicta, aut harum eveniet possimus beatae? Quod, temporibus quos.
-        Sunt vitae saepe fugit exercitationem expedita facere laborum porro, quidem rem, tempora, est doloribus provident minima incidunt nesciunt facilis nulla! Nemo nesciunt omnis nam et dolorem facere maxime. Nemo, reiciendis!
-        Quidem similique voluptates quam officia saepe est maiores, voluptatibus dolorum recusandae explicabo minus dolores labore commodi dignissimos ea eos aperiam dolor fugit quos ex voluptatum deserunt, aspernatur consequuntur nam. Nobis?</p>
-    </section>
+    <div class="boxTextArea">
+        <p>
+            Une veille technologique est un processus systématique de collecte, 
+            de surveillance et d'analyse des informations sur les technologies émergentes, 
+            les innovations et les tendances dans un domaine spécifique. 
+            Elle permet aux entreprises et aux professionnels de rester informés des dernières 
+            avancées technologiques, d'identifier les opportunités et les menaces potentielles, 
+            et de prendre des décisions éclairées pour maintenir leur compétitivité.
+        </p>
+        <p>
+            La veille technologique peut inclure la surveillance de brevets, 
+            de publications scientifiques, de conférences, de blogs spécialisés, 
+            de réseaux sociaux et d'autres sources d'information pertinentes. 
+            Elle est souvent utilisée pour anticiper les évolutions du marché, 
+            pour innover et pour adapter les stratégies de développement.
+        </p>
+        <p>
+            En ce qui me concerne j'oriente ma veille technologique sur l'évolution des 
+            langages de programmation dans les domaines du développement logiciel et l'ingénierie 3D.
+            Pour cela, je me documente sur le net en lisant des articles et sur YouTube.
+        </p>
+    </div>
+    <h2>YouTube</h2>
+    <div class="flexBox">
+        <a href="https://www.youtube.com/@techlinked" target="_blank">
+            <img src="images/logo/techLinkedProfile.jpg" alt="Profile Techlinked" style="border-radius: 50%; width: 100px;">
+            <h3>TechLinked</h3>
+        </a>
+        <a href="https://www.youtube.com/@Fireship" target="_blank">
+            <img src="images/logo/fireshipProfile.jpg" alt="Profile Fireship" style="border-radius: 50%; width: 100px;">
+            <h3>Fireship</h3>
+        </a>
+    </div>
+    <h2>Articles</h2>
+    <div class="flexBox">
+        <article>
+            <img src="images/logo/lemondeLogo.png" alt="Le Monde Logo" width="300px">
+            <div>
+                <h3>Le Monde - Artificial Intelligence</h3>
+                <a href="https://www.lemonde.fr/en/artificial-intelligence/" target="_blank"><i class="fa-solid fa-globe fa-1x"></i> Site Web</a>
+            </div>
+        </article>
+        <article>
+            <img src="images/logo/openaiLogo.png" alt="OpenAI Logo" width="300px">
+            <div>
+                <h3>OpenAI</h3>
+                <a href="https://openai.com/news/" target="_blank"><i class="fa-solid fa-globe fa-1x"></i> Site Web</a>
+            </div>
+        </article>
+    </div>
+    <hr>
+    <footer style="text-align: center;">
+        <p>&copy; 2025 - Gauthier Dubois</p>
+    </footer>
 </body>
 </html>
